# sudoku

./: Cargo.toml  index.html
benches/: solve_17.rs
pkg/: sudoku.js  sudoku_bg.wasm
src/: lib.rs  pattern.rs  setup.rs  template.rs
