[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.88"
# web-sys = { version = "0.3.65", features = ["console"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "solve_17"
harness = false
